# Pico-Wordle

./: Cargo.toml  README.md
.cargo/: config.toml
Code/: Cargo.toml  build.rs
Code/src/: main.rs
Keyboard/: Cargo.toml
Keyboard/src/: main.rs
Schematic/: Schematic_v11.sch
src/: main.rs
